2003-09-07  Pierre Humblet <pierre.humblet@ieee.org>

	* signal.cc (nanosleep): Improve test for valid values.  Round delay up
	to resolution.  Fix test for negative remainder.  Use timeGetTime
	through gtod.
	(sleep): Round up return value.

2003-09-07  Pierre Humblet <pierre.humblet@ieee.org>
	    Christopher Faylor  <cgf@redhat.com>

	* hires.h (HIRES_DELAY_MAX): Define.
	(hires_ms::minperiod): Declare static.
	(hires_ms::resolution): New.
	(hires_ms::dmsecs): New.
	(hires_ms::prime): Return UINT.
	(gtod): Declare.
	* times.cc (hires_ms::prime): Always calculate minperiod and set it to
	1 in case of failure.  Return minperiod.
	(hires_ms::resolution): Define.
	(hires_ms::~hires_ms): Delete.
	(hires_ms::usecs): Check minperiod to prime.
	(gtod) Define as global.

2003-09-06  Christopher Faylor  <cgf@redhat.com>

	Remove left coercion throughout.

2003-09-04  Pierre Humblet  <pierre.humblet@ieee.org>

	* hires.h (hires_ms::~hires_ms): Delete declaration.
	* times.cc (hires_ms::~hires_ms): Delete definition..

2003-09-04  Christopher Faylor  <cgf@redhat.com>

	* dcrt0.cc (__argc_safe): New variable.
	(dll_crt0_1): Store argc in __argc_safe, which will theoretically
	remain untouched by the user.
	* fhandler_console.cc (fhandler_console::read): Silence some compiler
	warnings.
	* fhandler_raw.cc (fhandler_dev_raw::raw_read): Ditto.
	* pinfo.cc (_pinfo::commune_recv): Carefully bound argv scan and check
	for potentially bad pointers since user could have set argv cell to
	anythinw.
	* cygheap.h (CYGHEAPSIZE): Bump up size.

2003-09-04  Corinna Vinschen  <corinna@vinschen.de>

	* sysconf.cc (sysconf): Return more accurate value for _SC_AVPHYS_PAGES.

2003-09-04  Corinna Vinschen  <corinna@vinschen.de>

	* mmap.cc: Restructure. Add, remove and rewrite comments throughout
	for better readability.  Change function names for better
	understanding.
	(MAP_SET): Accomodate name change from map_map_ to page_map_.
	(MAP_CLR): Ditto.
	(MAP_ISSET): Ditto.